Fixed horizontal scroll bar appearing, with overflow-x: hidden;

--- a/css/master.css
+++ b/css/master.css
@@ -1,12 +1,19 @@
 html {
   scroll-behavior: smooth;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 * {
   font-family: 'Work Sans';
+  box-sizing: border-box;
 }
 body {
   margin: 0;
   display: grid;
+  width: 100vw;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 #title {
   font-family: 'Alegreya Sans SC';
@@ -19,8 +26,7 @@ body {
 #home {
   display: grid;
   justify-items: center;
-  min-height: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   height: 100vh;
   width: 100vw;
   left: 0;
@@ -30,9 +36,9 @@ body {
   margin-left: 0px;
   margin-top: 0px;
   background-image: url("../schooner.jpg");
-  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  box-sizing: border-box;
 }
 #me {
   min-width: 350px;
